; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_int_text.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-value-buffer.c_value_buffer_output_int_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value_buffer = type { i32, i32 }

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.value_buffer*, i32)* @value_buffer_output_int_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @value_buffer_output_int_text(%struct.value_buffer* %0, i32 %1) #0 {
  %3 = alloca %struct.value_buffer*, align 8
  %4 = alloca i32, align 4
  store %struct.value_buffer* %0, %struct.value_buffer** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %6 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @sprintf(i32 %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %11 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, %9
  store i32 %13, i32* %11, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.value_buffer*, %struct.value_buffer** %3, align 8
  %16 = getelementptr inbounds %struct.value_buffer, %struct.value_buffer* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %17, %14
  store i32 %18, i32* %16, align 4
  ret void
}

declare dso_local i32 @sprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
